# capture-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.rpi  LICENSE  docker-compose.yml  test.http
configuration/: default.toml
migration/src/: lib.rs  m20241219_091936_create_users_table.rs
src/: application.rs  configuration.rs  error.rs  errors.rs  main.rs  service.rs
src/capture/: pipeline.rs
src/controllers/: user_controller.rs
src/features/: mod.rs
src/features/streams/: pipeline.rs
src/features/users/: mod.rs  user_dto.rs  user_entity.rs  user_record.rs  user_routes.rs  user_service.rs
src/models/: user.rs
src/routes/: users.rs
src/web/: users.rs
test/: api.rs
tests/: api.rs
