[package]
name = "capture-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
ctrlc = "3.4.4"
gstreamer = "0.22.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
