[package]
name = "capture-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
config = "0.14.0"
ctrlc = "3.4.4"
dotenv = "0.15.0"
gstreamer = "0.22.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.61"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "=0.5.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
anyhow = "=1.0.86"
httpc-test = "0.1.9"
